# ttpose

./: .gitignore  pyproject.toml  readme.md
experiments/: analyze_real_exp.py  analyze_sim_exp.py  run_real_exp.sh  run_simulation_exp.sh  tool.FCStd
experiments/data/calib/: base_t_square.pose  base_t_square_manual.pose  tcp_t_tip.pose  tcp_t_tip_manual.pose
experiments/data/calib/square_manual/: base_t_tcp_0.pose  base_t_tcp_1.pose  base_t_tcp_2.pose
experiments/data/calib/square_pts/: base_t_tcp_pt_0.pose  base_t_tcp_pt_1.pose  base_t_tcp_pt_10.pose  base_t_tcp_pt_11.pose  base_t_tcp_pt_12.pose  base_t_tcp_pt_13.pose  base_t_tcp_pt_14.pose  base_t_tcp_pt_15.pose  base_t_tcp_pt_16.pose  base_t_tcp_pt_17.pose  base_t_tcp_pt_18.pose  base_t_tcp_pt_19.pose  base_t_tcp_pt_2.pose  base_t_tcp_pt_20.pose  base_t_tcp_pt_21.pose  base_t_tcp_pt_22.pose  base_t_tcp_pt_23.pose  base_t_tcp_pt_24.pose  base_t_tcp_pt_25.pose  base_t_tcp_pt_26.pose  base_t_tcp_pt_27.pose  base_t_tcp_pt_28.pose  base_t_tcp_pt_29.pose  base_t_tcp_pt_3.pose  base_t_tcp_pt_30.pose  base_t_tcp_pt_31.pose  base_t_tcp_pt_32.pose  base_t_tcp_pt_33.pose  base_t_tcp_pt_34.pose  base_t_tcp_pt_35.pose  base_t_tcp_pt_36.pose  base_t_tcp_pt_37.pose  (+48 more)
experiments/data/meshes/: matlab_logo.ply  matlab_logo_minkowski.ply
src/ttpose/: mesh_sampling.py  pose_grid.py  robot.py  rotation_grid.py  run.py  sample_pts.py  save_sample_pts.py  sphere_intersection.py  symsol_objects.py  translation_grid.py  ttpose.py  utils.py  vis.py
src/ttpose/calib/: table.py  table_cell_pts.py  table_manual.py  tip.py  tip_manual.py
(+268 files in other folders)
