[project]
name = "ttpose"
version = "0.0.1"
description = "Fixture calibration with guaranteed bounds from a few correspondence-free surface points"
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
dependencies = [
    "numpy >= 1.25, < 2.0",
    "miniball @ git+https://github.com/rasmushaugaard/miniball.git#subdirectory=python",
    "trimesh >= 4.1, < 5.0",
    "scipy >= 1.11, < 2.0",
    "open3d == 0.18",
    "torch >= 2.0, < 3.0",
    "einops >= 0.7, < 1.0",
    "transform3d == 0.0.4",
    "healpy >= 1.16, < 2.0",
    "diskcache >= 5.6, < 6.0",
    "cvxopt >= 1.3, < 2.0",
    "ur_rtde >= 1.5.7, < 2.0",
]

[project.urls]
paper = "https://arxiv.org/abs/2402.18123"